# gobject-list

./: README.md  gobject-list.c  meson.build  meson_options.txt
examples/hello-world/: README.md  meson.build
examples/hello-world/src/: hello_world.vala  meson.build
